cluster/apps/glance/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: glance
    app.kubernetes.io/version: v0.8.4
  name: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glance
        app.kubernetes.io/version: v0.8.4
    spec:
      containers:
      - image: glanceapp/glance:v0.8.4
        name: glance
        ports:
        - containerPort: 8080
          name: glance
        volumeMounts:
        - mountPath: /app/config
          name: configmap-volume
      volumes:
      - name: configmap-volume
        configMap:
          name: glance-configmap
