cluster/apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: glance
    app.kubernetes.io/version: v0.8.4
  name: glance
spec:
  ports:
  - name: http-glance
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: glance
