cluster/apps/glance/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: glance-networkpolicy
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbird
          podSelector:
            matchLabels:
              app.kubernetes.io/name: netbird-router
